released v0.3.1 - attempting to fix horizontal scroll issue

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -72,8 +72,8 @@ html {
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
   font-family: "Overpass", sans-serif;
-  margin-left: calc(100vw - 100%);
   background-color: var(--background-color);
+  overflow-x: hidden;
 }
 
 body {
